--- a/style.css
+++ b/style.css
@@ -5,11 +5,26 @@ body {
   margin: 0px;
   background-color: #f2f2f2;
 }
-
+a:link,
+a:visited,
+a:active {
+  text-decoration: none;
+  color: inherit;
+}
 header {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   flex-direction: row;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: #f2f2f2;
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+.header-scroll {
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
 }
 
 .text-menu {
@@ -42,18 +57,19 @@ header {
   align-self: center;
 }
 .presentation {
-  margin-left: 150px;
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
-  margin-top: 160px;
-  margin-left: 150px;
+  max-width: 1000px;
+  margin: 0 auto;
+  margin-top: 100px;
 }
 .name-img-presentation {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  gap: 7px;
+  align-items: flex-start;
+  gap: 15px;
+  margin-bottom: 15px;
 }
 .vector-logo {
   width: 15px;
@@ -67,7 +83,7 @@ h1 {
   font-size: 48px;
   line-height: 61px;
   color: #000000;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 .front-end {
   font-family: "Lora";
@@ -76,8 +92,7 @@ h1 {
   font-size: 19px;
   line-height: 24px;
   color: #000000;
-  margin-bottom: 7px;
-  margin-top: 0px;
+  margin: 0;
 }
 .line {
   border: 1px solid #000000;
@@ -94,14 +109,17 @@ h1 {
   width: 30px;
   height: 30px;
 }
-.container-intro {
+.section-intro {
   background-color: #425bb3;
+}
+.container-intro {
   padding-top: 50px;
-  padding-bottom: 70px;
+  padding-bottom: 50px;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 .title-intro {
-  margin-left: 150px;
-  margin-top: 60px;
+  /* margin-top: 30px; */
   font-family: "Lora";
   font-style: normal;
   font-weight: 400;
@@ -110,26 +128,29 @@ h1 {
   color: #ffffff;
 }
 .text-intro {
-  margin-left: 150px;
-  margin-right: 100px;
   font-family: "Lora";
   font-style: normal;
-  font-weight: 400;
+  font-weight: 300;
   font-size: 16px;
-  line-height: 18px;
+  line-height: 20px;
   color: #ffffff;
 }
-
+.container-projects {
+  max-width: 1000px;
+  margin: 0 auto;
+}
 .text-title-project {
-  margin-left: 150px;
   margin-top: 50px;
-  margin-bottom: 500px;
+  margin-bottom: 50px;
   font-family: "Lora";
   font-style: normal;
   font-weight: 400;
   font-size: 30px;
   line-height: 38px;
   color: #000000;
+}
+footer {
+  margin-top: 300px;
 }
 .copy-right {
   background-color: #425bb3;
@@ -178,4 +199,73 @@ li:hover {
 li {
   position: relative;
   transition: color 0.3s ease;
+}
+/* Projects section */
+.project-card {
+  display: flex;
+  flex-direction: row;
+  background-color: #ffffff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+  margin-bottom: 40px;
+}
+.project-container-info {
+  display: flex;
+  flex-direction: column;
+}
+.project-name-logo {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  gap: 10px;
+}
+.technologies {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  margin-bottom: 50px;
+  margin-bottom: 37px;
+  font-family: "Anonymous Pro";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 12px;
+
+  color: #000000;
+}
+.project-description {
+  margin-right: 90px;
+}
+.project-description-p {
+  text-align: justify;
+  margin-top: 13px;
+  margin-bottom: 30px;
+  font-family: "Lora";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 20px;
+  color: #000000;
+}
+.img-project {
+  width: 470px;
+  padding-top: 25px;
+  padding-right: 15px;
+  padding-bottom: 25px;
+}
+.project-container-info {
+  padding-left: 42px;
+}
+.project-github {
+  width: 20px;
+  height: 20px;
+}
+.project-name {
+  font-family: "Lora";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  color: #000000;
+  margin-top: 35px;
+  margin-bottom: 0px;
 }
